fixed styling alignment for dates

--- a/reactcalendar/src/Components/Stylings/Calendar.css
+++ b/reactcalendar/src/Components/Stylings/Calendar.css
@@ -8,6 +8,7 @@
     position: fixed;
     top: 20%;
     background-color: white;
+    cursor: default;
 }
 
 .weekHeader {
@@ -17,6 +18,32 @@
     padding: 24px;
 }
 
+.weekDivs {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 24px 0px 24px;
+}
+
+.dayBtn {
+    background-color: transparent;
+    border-width: 0;
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    padding: 0;
+    cursor: pointer;
+}
+
+.fillerH5 {
+    color: rgb(140, 138, 138);
+}
+
+h5 {
+    width: 1rem;
+}
 
 
 /* .calendarHeader {
